--- a/talk.ipynb
+++ b/talk.ipynb
@@ -206,7 +206,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "import tokens"
@@ -215,7 +219,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Twitter\n",
@@ -225,7 +233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "api_twitter = Twitter(\n",
@@ -239,7 +251,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "resultado = api_twitter.statuses_home_timeline().get()\n",
@@ -250,7 +266,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "tweets = api_twitter.search_tweets().get(params={'q': '#CPNatal'})\n",
@@ -261,17 +281,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
-    "statuses_update = api_twitter.statuses_update().post(params={'status': 'Teste API'})\n",
+    "status = 'Palestrando na #CPNatal sobre WebCrawlers e API com Python'\n",
+    "statuses_update = api_twitter.statuses_update().post(params={'status': status})\n",
     "print(statuses_update().data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Facebook\n",
@@ -285,18 +314,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
-    "likes = api_facebook.user_likes(id='me').get()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "likes = api_facebook.user_likes(id='me').get()\n",
     "for like in likes().data:\n",
     "    print(like)"
    ]
@@ -304,7 +329,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "likes().data['paging']"
@@ -313,7 +342,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "for like in likes().pages():\n",
@@ -323,7 +356,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "feed = api_facebook.user_feed(id='me').get()\n",
@@ -334,11 +371,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
-    "user_feed = api_facebook.user_feed(id='me').post(data={'message': 'Facebook teste'})\n",
+    "message = 'Palestrando sobre Web Crawlers com Python na #CPNatal'\n",
+    "user_feed = api_facebook.user_feed(id='me').post(data={'message': message})\n",
     "print(user_feed().data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "url = 'http://loterias.caixa.gov.br/wps/portal/loterias/landing/megasena/'\n",
+    "\n",
+    "driver = webdriver.PhantomJS('phantomjs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lista = driver.find_element_by_id(\"ulDezenas\")\n",
+    "for dezena in lista.find_elements_by_tag_name(\"li\"):\n",
+    "    print(dezena.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "anterior = driver.find_element_by_link_text(\"< Anterior\")\n",
+    "anterior.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lista = driver.find_element_by_id(\"ulDezenas\")\n",
+    "for dezena in lista.find_elements_by_tag_name(\"li\"):\n",
+    "    print(dezena.text)"
    ]
   },
   {
