adicionando notebook portal da transparência

--- a/talk.ipynb
+++ b/talk.ipynb
@@ -458,11 +458,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Obrigado\n",
+    "\n",
+    "### @GilenoFilho\n",
+    "### http://www.gilenofilho.com.br\n",
+    "### http://www.pycursos.com"
+   ]
   }
  ],
  "metadata": {
