--- a/talk.ipynb
+++ b/talk.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -381,6 +381,47 @@
     "message = 'Palestrando sobre Web Crawlers com Python na #CPNatal'\n",
     "user_feed = api_facebook.user_feed(id='me').post(data={'message': message})\n",
     "print(user_feed().data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uber\n",
+    "from uber_rides.session import Session\n",
+    "from uber_rides.client import UberRidesClient\n",
+    "\n",
+    "uber_session = Session(server_token='qZLzWGMbxgTW4uZIlE0zZ7OA2oQRwV88qyVIyi3a')\n",
+    "uber_client = UberRidesClient(uber_session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'localized_display_name': 'uberX', 'distance': 1.49, 'display_name': 'uberX', 'product_id': 'd737263a-dbba-4f6e-903c-824f5f605f81', 'high_estimate': 8.0, 'low_estimate': 6.0, 'duration': 420, 'estimate': 'R$6-8', 'currency_code': 'BRL'}, {'localized_display_name': 'UberSELECT', 'distance': 1.49, 'display_name': 'UberSELECT', 'product_id': '6184f481-6e1e-4742-bc93-9f855a5a6ea8', 'high_estimate': 10.0, 'low_estimate': 7.0, 'duration': 420, 'estimate': 'R$7-10', 'currency_code': 'BRL'}]\n",
+      "uberX R$6-8\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = uber_client.get_price_estimates(\n",
+    "    start_latitude=-8.1277971, \n",
+    "    start_longitude=-34.9046107,\n",
+    "    end_latitude=-8.1176322,  \n",
+    "    end_longitude=-34.9054008236179,\n",
+    "    seat_count=2\n",
+    ")\n",
+    "estimate = response.json.get('prices')\n",
+    "print (estimate)\n",
+    "print (estimate[0]['display_name'], estimate[0]['estimate'])"
    ]
   },
   {
